# sc2rs

./: Cargo.toml  README.md  _build.rs  build.rs  expanded.rs
sc2-pb-derive/: Cargo.toml  README.md
sc2-pb-derive/src/: from_protobuf.rs  lib.rs  to_protobuf.rs  utils.rs
sc2-protobuf/: Cargo.toml  README.md
sc2-protobuf/src/: lib.rs
sc2-protobuf/src/protos/: common.rs  data.rs  debug.rs  error.rs  query.rs  raw.rs  sc2api.rs  score.rs  spatial.rs  ui.rs
src/: lib.rs  types.rs  utils.rs
src/types/: common.rs  data.rs  debug.rs  error.rs  impls.rs  mod.rs  query.rs  raw.rs  score.rs  spatial.rs  ui.rs
