[package]
name = "sc2"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]

[dependencies]
protobuf = "*"
sc2_protobuf = {path = "sc2-protobuf"}
sc2-pb-derive = {path = "sc2-pb-derive"}
ws = "0.7.3"
url = "*"
failure = {git="https://github.com/withoutboats/failure"}
failure_derive = {git="https://github.com/withoutboats/failure_derive"}

[build-dependencies]
protoc-rust = "1.4"

[workspace]

[[bin]]
name = "main"
path = "bin/main.rs"
