[package]
name = "sc2"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]

[dependencies]
protobuf = "*"
sc2_protobuf = {path = "sc2-protobuf"}
sc2-pb-derive = {path = "sc2-pb-derive"}
ws-sync = {path = "z:\\devel\\ws-sync"}
url = "*"
failure = "0.1.1"
lazy_static = "*"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
protoc-rust = "1.4"

[workspace]

[[bin]]
name = "main"
path = "bin/main.rs"

[[bin]]
name = "gen_code"
path = "bin/gen_code.rs"
